--- a/SmartMemo/res/layout/suggestlist.xml
+++ b/SmartMemo/res/layout/suggestlist.xml
@@ -8,6 +8,8 @@
 
     <ListView
         android:id="@+id/lv_list_location"
+        android:paddingTop="0.5dp"
+        android:paddingBottom="0.5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
