--- a/SmartMemo/res/layout/listview_layout.xml
+++ b/SmartMemo/res/layout/listview_layout.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@color/lightgray">
 
     <LinearLayout
         android:id="@+id/memo_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@drawable/table_button_single_bg"
          >
 
         <LinearLayout
