重新检出代码
重新检出代码

--- a/SmartMemo/res/layout/activity_personalinfo.xml
+++ b/SmartMemo/res/layout/activity_personalinfo.xml
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/soft_current_version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
@@ -149,7 +149,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/soft_current_version"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableBottom="@drawable/ic_list_dividing_line"
@@ -161,7 +161,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/soft_current_version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
@@ -192,7 +192,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/soft_current_version"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableBottom="@drawable/ic_list_dividing_line"
@@ -204,7 +204,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/soft_current_version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
@@ -234,7 +234,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/soft_current_version"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableBottom="@drawable/ic_list_dividing_line"
@@ -246,7 +246,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/soft_current_version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
@@ -280,7 +280,7 @@
                 android:layout_height="wrap_content" >
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/soft_current_version"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
