--- a/SmartMemo/res/layout/activity_set.xml
+++ b/SmartMemo/res/layout/activity_set.xml
@@ -18,7 +18,7 @@
             android:textSize="22sp" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/editText_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
