--- a/SmartMemo/res/layout/activity_about.xml
+++ b/SmartMemo/res/layout/activity_about.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -28,10 +27,8 @@
             android:hint="@string/show_current_version"
             android:text="V 1.1.0"
             android:textSize="22sp" />
-
     </RelativeLayout>
-    
-    
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -44,7 +41,19 @@
             android:layout_centerVertical="true"
             android:text="@string/use_instruction"
             android:textSize="22sp" />
-
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/use_instructions"
+        android:layout_width="match_parent"
+        android:layout_height="265dp"
+        android:layout_weight="0.54"
+        android:hint="@string/use_instructions" />
+
+    <Button
+        android:id="@+id/btn_return_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_tomain" />
 
 </LinearLayout>
