--- a/SmartMemo/res/layout/activity_setuser.xml
+++ b/SmartMemo/res/layout/activity_setuser.xml
@@ -38,7 +38,7 @@
             android:id="@+id/et_tel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/textView4"
+            android:layout_alignBottom="@+id/show_select_province"
             android:layout_alignLeft="@+id/et_hob"
             android:layout_alignParentRight="true"
             android:ems="10"
@@ -46,7 +46,7 @@
             android:inputType="phone" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/show_select_province"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
