--- a/SmartMemo/res/layout/activity_set.xml
+++ b/SmartMemo/res/layout/activity_set.xml
@@ -17,18 +17,37 @@
             android:text="@string/remind_text_distance"
             android:textSize="22sp" />
 
-        <EditText
-            android:id="@+id/editText_distance"
+        <Spinner
+            android:id="@+id/spinner_Distances"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/textView1"
-            android:ems="10" >
-
-            <requestFocus />
-        </EditText>
+            android:layout_marginLeft="34dp"
+            android:layout_toRightOf="@+id/textView1" />
 
     </RelativeLayout>
+    
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="@string/set_distance"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/show_select_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/textView7"
+                android:hint="@string/choose_distance"
+                android:textSize="22sp" />
+        </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -88,8 +107,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:text="@string/remind_province"
+            android:text="@string/set_choose_citys"
             android:textSize="22sp" />
+
+        <Spinner
+            android:id="@+id/spinner_citys"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_toRightOf="@+id/textView5" />
 
     </RelativeLayout>
 
@@ -97,14 +123,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/btn_tomain"
+        <TextView
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:text="@string/btn_tomain" />
+            android:text="@string/set_choose_city"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView4"
+            android:layout_alignBottom="@+id/textView4"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@+id/textView4"
+            android:hint="@string/set_choose_city"
+            android:textSize="22sp" />
+
+"
 
     </RelativeLayout>
-
 </LinearLayout>
