--- a/SmartMemo/res/layout/setlayout.xml
+++ b/SmartMemo/res/layout/setlayout.xml
@@ -176,7 +176,7 @@
                 android:id="@+id/bt_setOk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="确认"
+                android:text="保存"
                 />
           
 </LinearLayout>
