--- a/SmartMemo/res/layout/setlayout.xml
+++ b/SmartMemo/res/layout/setlayout.xml
@@ -2,181 +2,157 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-     >
- 
-	  <LinearLayout
+    android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:drawableBottom="@drawable/line_info"
-               android:text="系统设置"
-               android:textColor="@color/skyblue"
-               android:textSize="25dp" />
-      </LinearLayout>
+            android:drawableBottom="@drawable/line_info"
+            android:text="系统设置"
+            android:textColor="@color/skyblue"
+            android:textSize="25dp" />
+    </LinearLayout>
 
-     <LinearLayout
-	         android:layout_width="match_parent"
-	         android:layout_height="wrap_content" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="15dp" />
-     </LinearLayout>
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal" >
-
-          <TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_weight="0.2"
-              android:gravity="center"
-              android:text="所在省份："
-              android:textSize="20dp" />
-
-          <Spinner
-       			 android:id="@+id/set_province"
-     	 	  android:layout_width="wrap_content"
-     	 	  android:layout_height="wrap_content"
-           	 android:layout_weight="0.8"
-         />
-      </LinearLayout>
-
-     <TextView
-         android:id="@+id/soft_current_version_onSet"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:drawableBottom="@drawable/ic_list_dividing_line"
-         android:text=""
-         android:textSize="4dp" />
-
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content" >
-
-           <TextView
-               android:id="@+id/soft_current_version_onSet"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text=""
-               android:textSize="15dp" />
-       </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
-                    android:gravity="center"
-                    android:text="所在城市："
-                    android:textSize="18dp" />
-
-               <Spinner
-       		 android:id="@+id/set_city"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-                      android:layout_weight="0.8"
-        
-         />
-            </LinearLayout>
+        android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/soft_current_version"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableBottom="@drawable/ic_list_dividing_line"
-                android:text=""
-                android:textSize="4dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="15sp"
+            android:gravity="center"
+            android:text="所在省份："
+            android:textSize="18sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+        <Spinner
+            android:id="@+id/set_province"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="15sp"
+            android:layout_weight="0.8" />
+    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/soft_current_version"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="15dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
-                    android:gravity="center"
-                    android:text="设置提醒的距离："
-                    android:textSize="18dp" />
-
-               <Spinner
-       		 android:id="@+id/set_reminddistance"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/soft_current_version_onSet"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-                      android:layout_weight="0.8"
-        
-        />
-            </LinearLayout>
+        android:drawableBottom="@drawable/ic_list_dividing_line"
+        android:text=""
+        android:textSize="4dp" />
 
-            <TextView
-                android:id="@+id/soft_current_version"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableBottom="@drawable/ic_list_dividing_line"
-                android:text=""
-                android:textSize="4dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="15sp"
+            android:gravity="center"
+            android:text="所在城市："
+            android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/soft_current_version"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="15dp" />
-            </LinearLayout>
+        <Spinner
+            android:id="@+id/set_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="15sp"
+            android:layout_weight="0.8" />
+    </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.2"
-                    android:gravity="center"
-                    android:text="定位时间间隔："
-                    android:textSize="18dp" />
-
-                <Spinner
-       		 android:id="@+id/set_loctiontime"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/soft_current_version"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-                      android:layout_weight="0.8"
-        />
-            </LinearLayout>
+        android:drawableBottom="@drawable/ic_list_dividing_line"
+        android:text=""
+        android:textSize="4dp" />
 
-            <Button 
-                android:id="@+id/bt_setOk"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="保存"
-                />
-          
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="15sp"
+            android:gravity="center"
+            android:text="设置提醒的距离："
+            android:textSize="18sp" />
+
+        <Spinner
+            android:id="@+id/set_reminddistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="15sp"
+            android:layout_weight="0.8" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableBottom="@drawable/ic_list_dividing_line"
+        android:text=""
+        android:textSize="15sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="15sp"
+            android:gravity="center"
+            android:text="定位时间间隔："
+            android:textSize="18sp" />
+
+        <Spinner
+            android:id="@+id/set_loctiontime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10sp"
+            android:layout_marginTop="15sp"
+            android:layout_weight="0.8" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/btn_syn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/xml_layout_background"
+            android:layout_marginTop="15sp"
+            android:text="数据同步"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/bt_setOk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/xml_layout_background"
+            android:text="保存设置"
+            android:layout_marginTop="15sp"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
 </LinearLayout>
