//地图界面优化

--- a/SmartMemo/res/layout/activity_two.xml
+++ b/SmartMemo/res/layout/activity_two.xml
@@ -13,15 +13,15 @@
             android:layout_height="fill_parent"
             android:clickable="true" />
 
-   
-    <Button
-            android:id="@+id/z_location_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="22dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/custom_loc" />
+   <Button
+       android:id="@+id/z_location_button"
+       style="?android:attr/buttonStyleSmall"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentRight="true"
+       android:layout_alignParentTop="true"
+       android:layout_marginRight="32dp"
+       android:layout_marginTop="33dp"
+       android:background="@drawable/custom_loc" />
    
 </RelativeLayout>
