--- a/SmartMemo/res/layout/setlayout.xml
+++ b/SmartMemo/res/layout/setlayout.xml
@@ -130,6 +130,15 @@
             android:layout_weight="0.8" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/bt_setOk"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15sp"
+        android:background="@drawable/xml_layout_background"
+        android:text="保存设置"
+        android:textColor="@color/white" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -138,30 +147,20 @@
             android:id="@+id/btn_syn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
             android:layout_weight="1"
             android:background="@drawable/xml_layout_background"
-            android:layout_marginTop="15sp"
             android:text="上传到云端"
             android:textColor="@color/white" />
-        
+
         <Button
             android:id="@+id/btn_syn_to_here"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15sp"
             android:layout_weight="1"
             android:background="@drawable/xml_layout_background"
-            android:layout_marginTop="15sp"
             android:text="同步到本地"
-            android:textColor="@color/white" />
-
-        <Button
-            android:id="@+id/bt_setOk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/xml_layout_background"
-            android:text="保存设置"
-            android:layout_marginTop="15sp"
             android:textColor="@color/white" />
     </LinearLayout>
 
