--- a/SmartMemoWebSite/src/images/login.css
+++ b/SmartMemoWebSite/src/images/login.css
@@ -1,7 +1,9 @@
 body{margin:0; padding:0; font-size:9pt;}
 #login{margin:auto; width:975px; height:368px; margin-top:120px;}
 #top_left{width:691px; height:89px; float:left;}
-#top_left img {margin-left:33px;}
+#top_left img {
+	margin-left: 0px;
+}
 #top_center{width:248px; height:89px; background:url(login_05.gif); float:left;}
 
 #center_left{width:691px; height:190px; background:url(login_09.gif); float:left;}
@@ -13,29 +15,43 @@ body{margin:0; padding:0; font-size:9pt;}
 #inf{width:691px; height:38px; background:url(login_18.gif) no-repeat; }
 .inf_text{
 	display: block;
-	width: 100px;
+	width: 80px;
 	height: 20px;
 	font-size: 16px;
 	font-weight: bolder;
 	color: #000;
-	margin-left: 17px;
-	margin-top: 12px;
+	margin-left: auto;
+	margin-top: 45px;
 	float: left;
 }
 .copyright{
 	display: block;
 	float: left;
-	margin-left: 17px;
-	margin-top: 15px;
+	margin-left: 0px;
+	margin-top: 45px;
 	font-size: 12pt;
+	color: #000;
 }
 
-#user{ margin-left:30px; margin-top:45px; height:25px;}
-#password{margin-left:30px; margin-top:25px; height:25px;}
-input{width:180px; height:25px; border:solid 1px #aca7a7; font-size:9pt;}
+#user{
+	margin-left: 30px;
+	margin-top: 10px;
+	height: 28px;
+}
+#password{
+	margin-left: 30px;
+	margin-top: 35px;
+	height: 25px;
+}
+input{
+	width: 180px;
+	height: 25px;
+	border: solid 1px #aca7a7;
+	font-size: 12pt;
+}
 #btn{
 	margin-left: 20px;
-	margin-top: 40px;
+	margin-top: 46px;
 	height: 36px;
 	margin-right: 28px;
 	text-align: center;
